--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tfs-common-library",
+  "name": "@thefreestars/tfs-common-library",
   "version": "1.2.0",
   "description": "Made with create-react-library",
   "repository": {
