--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,6 +34,10 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: yarn install
+      - run: git config --global user.email "vuquangkhtn@gmail.com"
+      - run: git config --global user.name "Quang Nguyen"
+      - run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/vuquangkhtn/tfs-common-library.git
       - run: npm publish --access public
     env:
       NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
