--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,9 +31,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org/
       - run: yarn install
       - run: npm publish --access public
     env:
-      NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
